feat: definicao de prompt